setup initial html

--- a/index.html
+++ b/index.html
@@ -9,11 +9,27 @@
   </head>
   <body>
  <header>
-  <h1>Todo List</h1>
+  <h1>Gjøremåls liste</h1>
  </header>
 
  <main>
-  <!--Her kommer Gjøremåls Listen-->
+  <!--Her er input HTML-->
+ <form id="user-input">
+  <label for="todo">Gjøremål</label>
+  <input type="text" name="todo" id="todo"/>
+
+<button type="submit">Legg til</button>
+ </form>
+
+<!-- Gjøremåls listen  -->
+<ul>
+  <!-- Eksempel HTML for Gjøresmåls Kort-->
+<li>
+  <h2>Mat haien</h2>
+</li>
+
+</ul>
+
  </main>
   </body>
 </html>
