--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  </form>
 
 <!-- Gjøremåls listen  -->
-<ul>
+<ul id="todo-list">
   <!-- Eksempel HTML for Gjøresmåls Kort-->
 <li>
   <h2>Mat haien</h2>
