--- a/index.html
+++ b/index.html
@@ -4,28 +4,25 @@
     <title>Home</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <script type="module" src="script.js"></script>
   </head>
   <body>
- <header>
-  <h1>Gjøremåls liste</h1>
- </header>
+    <header>
+      <h1>Gjøremåls Liste</h1>
+    </header>
 
- <main>
-  <!--Her er input HTML-->
- <form id="user-input">
-  <label for="todo">Gjøremål</label>
-  <input type="text" name="todo" id="todo"/>
+    <main>
+      <!-- Her er input HTML -->
+      <form id="user-input">
+        <label for="todo">Gjøremål</label>
+        <input type="text" name="todo" id="todo" />
 
-<button type="submit">Legg til</button>
- </form>
+        <button type="submit">Legg Til</button>
+      </form>
 
-<!-- Gjøremåls listen  -->
-<ul id="todo-list">
-
-</ul>
-
- </main>
+      <!-- Gjøremåls listen -->
+      <ul id="todo-list"></ul>
+    </main>
   </body>
 </html>
