setup css todoCard js

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="text-center underline text-4xl text-orange-500">Gjøremåls Liste</h1>
     </header>
 
-    <main>
+    <main class="flex flex-col items-center p-5">
       <!-- Her er input HTML -->
       <form class="flex flex-col items-center bg-purple-100 p-4 w-2/3 text-xl" id="user-input">
         <label for="todo">Gjøremål</label>
@@ -23,7 +23,7 @@
       </form>
 
       <!-- Gjøremåls listen -->
-      <ul class="flex flex-col gap-4 items-center bg-slate-200 p-4 m-4 rounded shadow-xl" id="todo-list"></ul>
+      <ul class="flex flex-col gap-4 items-center bg-slate-300 p-4 m-4 rounded shadow-xl w-1/2" id="todo-list"></ul>
     </main>
   </body>
 </html>
