--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- Her er input HTML -->
       <form class="flex flex-col items-center bg-purple-100 p-4 w-2/3 text-xl" id="user-input">
         <label for="todo">Gjøremål</label>
-        <input class="bg-purple-400 rounded-full" type="text" name="todo" id="todo" />
+        <input class="bg-purple-400 rounded px-4 py-4" type="text" name="todo" id="todo" />
 
         <button type="submit">Legg Til</button>
       </form>
